--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13",
     "bulma": "^0.9",
-    "snabbdom": "^0.7"
+    "snabbdom": "^1.0.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6",
-    "browserify": "^17.0",
     "http-server": "^0.12.3",
+    "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.30"
+    "sass": "^1.30",
+    "webpack": "^5.10.3",
+    "webpack-cli": "^4.2.0"
   },
   "scripts": {
     "develop": "run-p mkdir server watch",
