--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "watch-fa": "nodemon --watch node_modules/@fortawesome -e '*' --exec 'npm run build-fa'",
     "build": "run-s mkdir build-frontend build-static build-css build-fa build-sw",
     "build-frontend": "sbt 'set scalaJSStage in ThisBuild := org.scalajs.sbtplugin.Stage.FullOpt; frontend/compile'",
-    "build-static": "cp frontend/src/main/static/* build/.",
+    "build-static": "cp frontend/src/main/static/* build/. && cp node_modules/@fortawesome/fontawesome-free/svgs/solid/trash.svg build/.",
     "build-css": "sass frontend/src/main/css/app.sass build/app.css --no-source-map",
     "build-fa": "cp -r node_modules/@fortawesome/fontawesome-free/webfonts/* build/.",
     "build-sw": "sbt 'set scalaJSStage in ThisBuild := org.scalajs.sbtplugin.Stage.FullOpt; service-worker/compile'"
