--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "snabbdom": "^2.1.0"
   },
   "devDependencies": {
-    "http-server": "^0.12.3",
+    "node-static": "^0.7.11",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "sass": "^1.32",
@@ -15,7 +15,7 @@
   "scripts": {
     "develop": "run-p mkdir server watch",
     "mkdir": "mkdir build  -p",
-    "server": "http-server -c-1 build",
+    "server": "static -c-1 build",
     "watch": "run-p watch-*",
     "watch-frontend": "sbt ~frontend/compile",
     "watch-static": "nodemon --watch frontend/src/main/static -e '*' --exec 'npm run build-static'",
