--- a/frontend/src/main/static/manifest.json
+++ b/frontend/src/main/static/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Sudoku",
   "name": "Sudoku",
-  "version: "1.1",
+  "version": "1.1",
   "icons": [
     {
       "src": "/favicon.svg",
