--- a/frontend/src/main/static/manifest.json
+++ b/frontend/src/main/static/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.1",
   "icons": [
     {
-      "src": "/favicon.svg",
+      "src": "/favicon.svg?v=2",
       "type": "image/svg+xml",
       "sizes": "256x256"
     },
