--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,3 +7,5 @@ updates:
     time: "13:00"
   open-pull-requests-limit: 10
   versioning-strategy: increase
+  allow: 
+    - dependency-type: production
