--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,6 @@
-version=2.2.1
+version=3.0.3
+runner.dialect = Scala3
 
-align = more    // For pretty alignment.
-maxColumn = 130 // For my wide 30" display.
+align.preset = more  // For pretty alignment.
+maxColumn = 130      // For my wide 30" display.
+newlines.beforeCurlyLambdaParams = multiline
