--- a/package.json
+++ b/package.json
@@ -13,17 +13,13 @@
   "scripts": {
     "develop": "run-p mkdir server watch",
     "mkdir": "mkdir build  -p",
-    "server": "esbuild --serve=8080 --servedir=build",
     "watch": "run-p watch-*",
-    "watch-frontend": "sbt ~frontend/compile",
     "watch-static": "nodemon --watch frontend/src/main/static -e '*' --exec 'npm run build-static'",
     "watch-css": "nodemon --watch frontend/src/main/css -e '*' --exec 'npm run build-css'",
     "watch-fa": "nodemon --watch node_modules/@fortawesome -e '*' --exec 'npm run build-fa'",
-    "build": "run-s mkdir build-frontend build-static build-css build-fa build-sw",
-    "build-frontend": "sbt 'set ThisBuild / scalaJSStage := org.scalajs.sbtplugin.Stage.FullOpt; frontend/compile'",
+    "build": "run-s mkdir build-static build-css build-fa",
     "build-static": "cp frontend/src/main/static/* build/. && cp node_modules/@fortawesome/fontawesome-free/svgs/solid/trash.svg build/.",
     "build-css": "sass frontend/src/main/css/app.sass build/app.css --no-source-map",
-    "build-fa": "cp -r node_modules/@fortawesome/fontawesome-free/webfonts/* build/.",
-    "build-sw": "sbt 'set scalaJSStage in ThisBuild := org.scalajs.sbtplugin.Stage.FullOpt; service-worker/compile'"
+    "build-fa": "cp -r node_modules/@fortawesome/fontawesome-free/webfonts/* build/."
   }
 }
