--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "watch-static": "nodemon --watch frontend/src/main/static -e '*' --exec 'npm run build-static'",
     "watch-css": "nodemon --watch frontend/src/main/css -e '*' --exec 'npm run build-css'",
     "watch-fa": "nodemon --watch node_modules/@fortawesome -e '*' --exec 'npm run build-fa'",
-    "build": "run-s mkdir build-frontend build-static build-css build-fa build-sw",
+    "build": "run-s mkdir build-frontend build-static build-css build-fa",
     "build-frontend": "sbt 'set ThisBuild / scalaJSStage := org.scalajs.sbtplugin.Stage.FullOpt; frontend/compile'",
     "build-static": "cp frontend/src/main/static/* build/. && cp node_modules/@fortawesome/fontawesome-free/svgs/solid/trash.svg build/.",
     "build-css": "sass frontend/src/main/css/app.sass build/app.css --no-source-map",
-    "build-fa": "cp -r node_modules/@fortawesome/fontawesome-free/webfonts/* build/.",
-    "build-sw": "sbt 'set scalaJSStage in ThisBuild := org.scalajs.sbtplugin.Stage.FullOpt; service-worker/compile'"
+    "build-fa": "cp -r node_modules/@fortawesome/fontawesome-free/webfonts/* build/."
   }
 }
